Fixing layout issues in Slider.

--- a/src/ui/forms/Slider.less
+++ b/src/ui/forms/Slider.less
@@ -1,6 +1,7 @@
 
-.slider {
+.slider > div {
 	position: relative;
+	height: 100%;
 
 	.track, .range {
 		background: @progressBarBackground;
